--- a/views/author.ejs
+++ b/views/author.ejs
@@ -1,7 +1,7 @@
 <h1>Author</h1>
 
 <p>
-    This Web Site has been created by me.
+    This Web Site has been created by Angela Zaragüeta.
 </p>
 
 <img src="/images/avatar.png" width="200" />
